// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu items should not set any page as active when the page does not exist 1`] = `
<div
  className="menu"
>
   
  <a
    className="menu-item"
    href="/blog"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Blog
  </a>
   
   
  <a
    className="menu-item"
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
   
   
  <a
    className="menu-item"
    href="/archives"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Archives
  </a>
   
   
  <a
    className="menu-item"
    href="/tags"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Tags
  </a>
   
   
  <a
    className="menu-item"
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Credits & Resources
  </a>
   
   
  <a
    className="menu-item"
    href="/privacy-policy"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Privacy Policy
  </a>
   
   
  <a
    className="menu-item"
    href="/license"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    License
  </a>
   
   
  <a
    className="menu-item"
    href="https://github.com/cbillowes"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Github
  </a>
   
   
  <a
    className="menu-item"
    href="https://www.linkedin.com/in/cbouwer/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    LinkedIn
  </a>
   
</div>
`;

exports[`Menu items should set another page to active in the navigation items 1`] = `
<div
  className="menu"
>
   
  <a
    className="menu-item"
    href="/blog"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Blog
  </a>
   
   
  <a
    className="menu-item"
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
   
   
  <a
    className="menu-item"
    href="/archives"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Archives
  </a>
   
   
  <a
    className="menu-item"
    href="/tags"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Tags
  </a>
   
   
  <a
    className="menu-item"
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Credits & Resources
  </a>
   
  <a
    className="menu-item active"
    href="/#"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    Privacy Policy
  </a>
   
  <a
    className="menu-item"
    href="/license"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    License
  </a>
   
   
  <a
    className="menu-item"
    href="https://github.com/cbillowes"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Github
  </a>
   
   
  <a
    className="menu-item"
    href="https://www.linkedin.com/in/cbouwer/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    LinkedIn
  </a>
   
</div>
`;

exports[`Menu items should set the blog page to active for /blog 1`] = `
<div
  className="menu"
>
  <a
    className="menu-item active"
    href="/#"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    Blog
  </a>
   
  <a
    className="menu-item"
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
   
   
  <a
    className="menu-item"
    href="/archives"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Archives
  </a>
   
   
  <a
    className="menu-item"
    href="/tags"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Tags
  </a>
   
   
  <a
    className="menu-item"
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Credits & Resources
  </a>
   
   
  <a
    className="menu-item"
    href="/privacy-policy"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Privacy Policy
  </a>
   
   
  <a
    className="menu-item"
    href="/license"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    License
  </a>
   
   
  <a
    className="menu-item"
    href="https://github.com/cbillowes"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Github
  </a>
   
   
  <a
    className="menu-item"
    href="https://www.linkedin.com/in/cbouwer/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    LinkedIn
  </a>
   
</div>
`;

exports[`Menu items should set the blog page to active for /blog/ 1`] = `
<div
  className="menu"
>
  <a
    className="menu-item active"
    href="/#"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    Blog
  </a>
   
  <a
    className="menu-item"
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
   
   
  <a
    className="menu-item"
    href="/archives"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Archives
  </a>
   
   
  <a
    className="menu-item"
    href="/tags"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Tags
  </a>
   
   
  <a
    className="menu-item"
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Credits & Resources
  </a>
   
   
  <a
    className="menu-item"
    href="/privacy-policy"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Privacy Policy
  </a>
   
   
  <a
    className="menu-item"
    href="/license"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    License
  </a>
   
   
  <a
    className="menu-item"
    href="https://github.com/cbillowes"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Github
  </a>
   
   
  <a
    className="menu-item"
    href="https://www.linkedin.com/in/cbouwer/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    LinkedIn
  </a>
   
</div>
`;

exports[`Menu items should set the blog page to active for a given post 1`] = `
<div
  className="menu"
>
  <a
    className="menu-item active"
    href="/#"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    Blog
  </a>
   
  <a
    className="menu-item"
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    About
  </a>
   
   
  <a
    className="menu-item"
    href="/archives"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Archives
  </a>
   
   
  <a
    className="menu-item"
    href="/tags"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Tags
  </a>
   
   
  <a
    className="menu-item"
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Credits & Resources
  </a>
   
   
  <a
    className="menu-item"
    href="/privacy-policy"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Privacy Policy
  </a>
   
   
  <a
    className="menu-item"
    href="/license"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    License
  </a>
   
   
  <a
    className="menu-item"
    href="https://github.com/cbillowes"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Github
  </a>
   
   
  <a
    className="menu-item"
    href="https://www.linkedin.com/in/cbouwer/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    LinkedIn
  </a>
   
</div>
`;
